# cli

./: Cargo.toml  README.md
src/: jina_bert.rs  main.rs
src/embeddings/: mod.rs
src/markdown_parser/: mod.rs
