[package]
name = "text-yoga-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
candle-core = "0.3.2"
candle-nn = "0.3.2"
candle-transformers = "0.3.2"
clap = { version = "4.4.17", features = ["derive"] }
dirs = "5.0.1"
hf-hub = { version = "0.3.2", features = ["tokio"] }
serde = { version = "1.0.195", features = ["derive"] }
tokenizers = { version = "0.15.0", features = ["http"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }
itertools = "0.12.0"

[features]
default = []
# accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
# cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda"]
# cudnn = ["candle/cudnn"]
# flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
# mkl = ["dep:intel-mkl-src", "candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
# nccl = ["cuda", "cudarc/nccl", "dep:half"]
# onnx = ["candle-onnx"]
metal = ["candle-core/metal", "candle-nn/metal"]
